2008-05-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in
	  Add kahua-revision(get source code revision) and
	  kahua-version-info(both version and revision).

	* Change: DIST, Makefile.in, configure.ac, src/Makefile.in,
	          src/kahua/config.scm.in
	  Embed working copy revision in kahua.config module at the
	  build time(experimental).  svnversion command is required.

2008-04-22  Tatsuya BIZENN  <bizenn@arthub.net>

	* These are fixes of problems on Leopard (Mac OS X 10.5.x).

	* Fix: test/shell.scm, test/httpd.scm, test/dead-lock.scm,
	       test/admin.scm, test/spvr.scm
	  Wait child processes (w/ process-wait) appropriately and drop
	  extra sys-sleep.

	* Fix: src/kahua-keyserv.scm, src/kahua-spvr.scm
	  Ignore exceptions in some situation.

	* Add: src/kahua/util.scm (r3330)
	  Add a procedure "with-ignoring-exception".

	* Fix: src/kahua-keyserv.scm, src/kahua-spvr.scm
	  Fix wrong use of socket-shutdown's the 2nd argument, and comment
	  its mean (SHUT_RD/SHUT_WR/SHUT_RDWR).

2008-04-14  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: plugins/dsl-simple.scm
		  change macros to functions.
	
2008-04-09  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: plugins/dsl-simple.scm
	          remove fragment part from calendar/.
	
2008-04-06  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: plugins/dsl-simple.scm
	          change APIs, and add usefull widgets like as calendar date selector.
	
2008-03-28  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: src/kahua/server.scm
	       When parts-cont reutrn node-set, then unsplicing into
	       parent of target node.
	* Change: plugins/dsl-simple.scm
	          Add parts of comment/ experimental implementation.
	          Add parts post/ for button which has value.
	
2008-03-05  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm, src/kahua/protocol/http.scm
	  Fix that domain cookie attribute was specified unnecessarily.